--- a/CervantesMoraOscar-Proyecto2/src/Interfaz/VentanaPrincipal.form
+++ b/CervantesMoraOscar-Proyecto2/src/Interfaz/VentanaPrincipal.form
@@ -29,25 +29,30 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" pref="317" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="btnRegistrarArticulo" min="-2" pref="353" max="-2" attributes="0"/>
-                          <Component id="btnRegistrarDepartamento" min="-2" pref="353" max="-2" attributes="0"/>
-                          <Component id="btnEliminarArticulo" alignment="0" min="-2" pref="353" max="-2" attributes="0"/>
-                          <Component id="btnTrasladarArticulo" alignment="0" min="-2" pref="353" max="-2" attributes="0"/>
-                          <Component id="btnEliminarDepartamento" alignment="0" min="-2" pref="353" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="169" max="-2" attributes="0"/>
+                              <Component id="btnSalir" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="btnRegistrarArticulo" min="-2" pref="353" max="-2" attributes="0"/>
+                                  <Component id="btnRegistrarDepartamento" min="-2" pref="353" max="-2" attributes="0"/>
+                                  <Component id="btnEliminarArticulo" alignment="0" min="-2" pref="353" max="-2" attributes="0"/>
+                                  <Component id="btnTrasladarArticulo" alignment="0" min="-2" pref="353" max="-2" attributes="0"/>
+                                  <Component id="btnEliminarDepartamento" alignment="0" min="-2" pref="353" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
                       </Group>
+                      <EmptySpace min="0" pref="17" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="169" max="-2" attributes="0"/>
-                      <Component id="btnSalir" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="jLabel1" max="32767" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="40" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -56,7 +61,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
               <Component id="btnRegistrarDepartamento" min="-2" pref="65" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnRegistrarArticulo" min="-2" pref="65" max="-2" attributes="0"/>
@@ -66,7 +71,7 @@
               <Component id="btnTrasladarArticulo" min="-2" pref="65" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="btnEliminarDepartamento" min="-2" pref="65" max="-2" attributes="0"/>
-              <EmptySpace pref="83" max="32767" attributes="0"/>
+              <EmptySpace pref="82" max="32767" attributes="0"/>
               <Component id="btnSalir" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
           </Group>
@@ -79,6 +84,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI" size="24" style="1"/>
         </Property>
+        <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Tienda Por Departamentos"/>
       </Properties>
     </Component>
@@ -86,11 +92,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Registrar Departamento"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarDepartamentoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnRegistrarArticulo">
       <Properties>
         <Property name="text" type="java.lang.String" value="Registrar Art&#xed;culo"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRegistrarArticuloActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnEliminarArticulo">
       <Properties>
