Added functionality to Remove items

--- a/CervantesMoraOscar-Proyecto2/src/Interfaz/VentanaPrincipal.form
+++ b/CervantesMoraOscar-Proyecto2/src/Interfaz/VentanaPrincipal.form
@@ -108,6 +108,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Eliminar Art&#xed;culo"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEliminarArticuloActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnTrasladarArticulo">
       <Properties>
