Progress on move items functionality

--- a/CervantesMoraOscar-Proyecto2/src/Interfaz/VentanaPrincipal.form
+++ b/CervantesMoraOscar-Proyecto2/src/Interfaz/VentanaPrincipal.form
@@ -116,11 +116,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Trasladar Art&#xed;culo"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTrasladarArticuloActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnEliminarDepartamento">
       <Properties>
         <Property name="text" type="java.lang.String" value="Eliminar Departamento"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEliminarDepartamentoActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnSalir">
       <Properties>
