--- a/CervantesMoraOscar-Proyecto2/src/Interfaz/TrasladarArticulos.form
+++ b/CervantesMoraOscar-Proyecto2/src/Interfaz/TrasladarArticulos.form
@@ -170,6 +170,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Trasladar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnTrasladarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
